--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
     padding: 10px 20px;
     background: rgba(0, 0, 0, 0.2);
     box-sizing: border-box;
+    color: white;
 }
 .header img {
     height: 50px;
