final final del final

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,11 @@ body {
     color: white;
     overflow-x: hidden;
 }
+
+.letrawhite{
+    color:white;
+}
+
 .container {
     display: flex;
     flex-direction: column;
